[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "anki-sync"
version = "1.0.0"
description = "Bidirectional vocabulary synchronization between local YAML files and Anki Desktop"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "GenAI Automations"}
]
keywords = ["anki", "vocabulary", "sync", "yaml", "anki-connect"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "PyYAML>=5.4",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "flake8>=6.0",
    "mypy>=1.0",
    "pylint>=3.0",
    "types-PyYAML>=6.0",
    "responses>=0.25.0",
]

[project.scripts]
anki-sync = "anki_sync.cli:main"

[tool.setuptools.packages.find]
exclude = ["tests", "tests.*"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=anki_sync --cov-report=term-missing"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pylint.main]
jobs = 4
persistent = true
suggestion-mode = true

[tool.pylint.messages_control]
disable = [
    "missing-docstring",
]

[tool.pylint.format]
max-line-length = 120

[tool.pylint.basic]
good-names = ["i", "j", "k", "ex", "_", "id"]

[tool.pylint.design]
max-args = 10
max-locals = 20
